add initial `copytrade` bin impl

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,16 @@ chrono = { version = "0.4", features = ["serde"] }
 tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
 futures-util = "0.3"
 url = "2"
+polymarket-client-sdk = { version = "0.3", features = ["data"] }
+clap = { version = "4", features = ["derive"] }
+dotenvy = "0.15"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+rust_decimal = "1"
+
+[[bin]]
+name = "copytrade"
+path = "src/bin/copytrade.rs"
 
 [[bin]]
 name = "probe_trades"
