add `config.toml` support and adjust `copytrade` bin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 rust_decimal = "1"
 rust_decimal_macros = "1"
+toml = "0.8"
+rpassword = "7"
 
 [[bin]]
 name = "copytrade"
@@ -47,6 +49,10 @@ path = "src/bin/probe_clob_ws.rs"
 [[bin]]
 name = "probe_ws_btc"
 path = "src/bin/probe_ws_btc.rs"
+
+[[bin]]
+name = "setup-account"
+path = "src/bin/setup_account.rs"
 
 [[bin]]
 name = "probe_clob_trade"
