adjust `copytrade` bin
Live CLOB execution with resting order tracking and holdings seeding.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ rust_decimal = "1"
 rust_decimal_macros = "1"
 toml = "0.8"
 rpassword = "7"
+k256 = { version = "0.13.4", features = ["ecdsa"] }
 
 [[bin]]
 name = "copytrade"
